# ZeroWhats

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-snap.yml  release.yml
release/: README.md  build-linux.sh
release/aur/: PKGBUILD
release/flatpak/: cargo-sources.json  com.zaujulio.zerowhats.yml  node-sources.json
release/flatpak/flathub/: com.zaujulio.zerowhats.local.yml  com.zaujulio.zerowhats.yml
release/linux/: com.zaujulio.zerowhats.desktop  com.zaujulio.zerowhats.metainfo.xml
release/macos/: README.md
release/notes/: v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.2.3.md
release/snap/: snapcraft.yaml
release/windows/: README.md
release/windows/winget/: ZauJulio.ZeroWhats.installer.yaml  ZauJulio.ZeroWhats.locale.en-US.yaml  ZauJulio.ZeroWhats.yaml
scripts/: bump-version.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  whatsapp-remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  config.rs  lock.rs  main.rs  notification.rs  password.rs  scripts.rs  tray.rs  updater.rs  window.rs
src-tauri/src/web/: auto-lock.js  background-sync.js  bootstrap.js  clipboard-image.js  disable-media.js  download.js  find.js  fullscreen.js  links.js  mpris.js  notifications.js  privacy-blur.js  resize-handles.js  rounded-corners.js  spellcheck.js  titlebar.js  unread-badge.js  update-banner.js  wipe-session.js
src/lib/: api.ts  cx.ts  theme.ts  window.ts
src/lib/translations/: en.ts  index.ts  pt-BR.ts  types.ts
src/screens/About/: About.module.css  index.tsx
src/screens/Lock/: Lock.module.css  index.tsx
src/screens/Settings/: Settings.module.css  index.tsx
src/screens/Shortcuts/: Shortcuts.module.css  index.tsx
src/screens/Update/: Update.module.css  index.tsx
src/ui/components/: index.ts  shared.module.css
src/ui/components/AppWindow/: AppWindow.module.css  index.tsx
src/ui/components/Group/: Group.module.css  index.tsx
src/ui/components/Row/: Row.module.css  index.tsx
src/ui/components/Select/: Select.module.css  index.tsx
src/ui/components/Toggle/: Toggle.module.css  index.tsx
